[FIX] improve edit profile cropper & user change forms

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -27,8 +27,18 @@
     .post-writer {
         max-width: $max-main-width !important;
         .cropper {
-            max-width: 80% !important;
-            overflow-y: hidden;
+            max-width: 100% !important;
+            left: 0 !important;
+            overflow-y: hidden !important;
+            & .croppable {
+                max-width: 100% !important;
+                max-height: 100% !important;
+                object-fit: contain;
+                img {
+                    background-image: url("@assets/Untitledasdasd.png");
+                    background-repeat: repeat;
+                }
+            }
             .crop-btn {
                 bottom: 5px !important;
             }
